# tcp-load-balancer

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  decisions.md
src/: config.c  config.h  connection.h  health.c  health.h  main.c  poller.h  poller_epoll.c  poller_kqueue.c  pool.c  pool.h  server.c  server.h
tests/: concurrent_client.c  distribution_probe.c  echo_backend.c  smoke_test.sh
